--- a/Disease Prediction Using Machine Learning + App/requirements.txt
+++ b/Disease Prediction Using Machine Learning + App/requirements.txt
@@ -1,8 +1,9 @@
 # Python Dependencies for Disease Prediction Project
-pandas==2.2.2
-numpy==1.26.4
+
+pandas>=2.0
+numpy>=1.24
+scikit-learn>=1.2
 matplotlib==3.9.0
 seaborn==0.13.2
-scikit-learn==1.5.1
-streamlit==1.38.0
-joblib==1.4.2
+streamlit>=1.10
+joblib
